--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><strong>Lunghelo Mlati</strong> TheBLVR</a></h1>
+						<h1><a href="/"><strong>Lunghelo Mlati</strong> TheBLVR</a></h1>
 						<nav>
 							<ul>
 								<li><a href="#footer" class="icon fa-info-circle">About</a></li>
